@@ -3,14 +3,13 @@
 # This demonstration script creates a toplevel window containing a Ttk
 # notebook widget.
 #
-# RCS: @(#) $Id: ttknote.tcl,v 1.5 2007/12/13 15:27:07 dgp Exp $
+# RCS: @(#) $Id: ttknote.tcl,v 1.6 2008/12/11 18:13:08 jenglish Exp $
 
 if {![info exists widgetDemo]} {
     error "This script should be run from the \"widget\" demo."
 }
 
 package require Tk
-package require Ttk
 
 set w .ttknote
 catch {destroy $w}
@@ -55,10 +54,6 @@ ttk::frame $w.note.editor
 $w.note add $w.note.editor -text "Text Editor" -underline 0
 text $w.note.editor.t -width 40 -height 10 -wrap char \
 	-yscroll "$w.note.editor.s set"
-if {[tk windowingsystem] ne "aqua"} {
-    ttk::scrollbar $w.note.editor.s -orient vertical -command "$w.note.editor.t yview"
-} else {
-    scrollbar $w.note.editor.s -orient vertical -command "$w.note.editor.t yview"
-}
+ttk::scrollbar $w.note.editor.s -orient vertical -command "$w.note.editor.t yview"
 pack $w.note.editor.s -side right -fill y -padx {0 2} -pady 2
 pack $w.note.editor.t -fill both -expand 1 -pady 2 -padx {2 0}
